--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@hapi/joi": "^17.1.1",
     "apollo-server-express": "2",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "joi": "^17.4.2",
-    "mongoose": "^6.0.8",
-    "nodemon": "^2.0.13"
+    "mongoose": "^6.0.9",
+    "nodemon": "^2.0.13",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "standard": "^16.0.3",
